# askama_playground

./: .gitmodules  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  script.mjs
.github/workflows/: rust.yml
src/: app.rs
